syntax = "proto3";

package hello;



service HelloService {
    rpc HelloWorld(HelloRequest) returns (HelloResponse) {}

}

message HelloRequest {
    string first_name = 1;
    string last_name = 2;
}
message HelloResponse {
    string message = 1;
}